<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.a.atiyah.news.ui.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/home_to_bookmark"
            app:destination="@id/navigation_bookmark"
            app:enterAnim="@anim/nav_default_pop_enter_anim" />
    </fragment>

    <fragment
        android:id="@+id/navigation_recent_news"
        android:name="com.a.atiyah.news.ui.fragment.RecentNewsFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_recent_news" />

    <fragment
        android:id="@+id/navigation_bookmark"
        android:name="com.a.atiyah.news.ui.fragment.BookmarkFragment"
        android:label="@string/title_bookmark"
        tools:layout="@layout/fragment_bookmark" />
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.a.atiyah.news.ui.fragment.SettingsFragment"
        android:label="SettingsFragment" />
</navigation>