<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/medium_padding_8dp"
    android:background="@drawable/auth_bg">

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:contentDescription="@string/cd_image"
            android:src="@drawable/ic_avatar"
            tools:ignore="ImageContrastCheck" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_created_by_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/created_by"
            android:layout_gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_details_auth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/unknown"
            android:layout_gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/author"/>

    </LinearLayout>
</LinearLayout>